// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CityScape loader Basic functions module result 1`] = `
Array [
  Object {
    "scope": "MUNICIPAL",
  },
]
`;

exports[`CityScape loader Basic functions module result 2`] = `
Array [
  Object {
    "scope": "NATIONAL",
  },
]
`;

exports[`CityScape loader findAddress key 1 1`] = `
Object {
  "scope": "MUNICIPAL",
}
`;

exports[`CityScape loader findAddress key 2 1`] = `
Object {
  "scope": "NATIONAL",
}
`;

exports[`CityScape loader reducer 1`] = `
Object {
  "scope": "NATIONAL",
}
`;
